templates/shortlink-bff-web_template.yaml
---
# Source: shortlink-bff-web/templates/base.yaml
apiVersion: v1
kind: Service
metadata:  
    name: release-name-shortlink-bff-web
    labels:
      app.kubernetes.io/name: shortlink-bff-web
      helm.sh/chart: shortlink-bff-web-0.1.1
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/version: "1.0.0"
      app.kubernetes.io/part-of: shortlink
      track: stable
spec:
  type: ClusterIP
  ipFamilyPolicy: PreferDualStack
  ipFamilies:
    - IPv4
  ports:
    - name: http
      port: 7070
      targetPort: http
      protocol: TCP
      # https://gateway-api.sigs.k8s.io/guides/backend-protocol/
      appProtocol: 
  selector:    
    app.kubernetes.io/name: shortlink-bff-web
    app.kubernetes.io/instance: release-name
---
# Source: shortlink-bff-web/templates/base.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-shortlink-bff-web
  labels:
    app.kubernetes.io/name: shortlink-bff-web
    helm.sh/chart: shortlink-bff-web-0.1.1
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/part-of: shortlink
    track: stable
  annotations:
    {}
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:      
      app.kubernetes.io/name: shortlink-bff-web
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: shortlink-bff-web
        helm.sh/chart: shortlink-bff-web-0.1.1
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/version: "1.0.0"
        app.kubernetes.io/part-of: shortlink
        track: stable
    spec:
      terminationGracePeriodSeconds: 60
      automountServiceAccountToken: true
      serviceAccountName: release-name-shortlink-bff-web
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:      
      - name: application
        # -- Security Context policies for controller pods
        # See https://kubernetes.io/docs/tasks/administer-cluster/sysctl-cluster/ for
        # notes on enabling and using sysctls
        securityContext:
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          # runAsUser is the user ID used to run the container
          runAsUser: 1000
          # runAsGroup is the primary group ID used to run all processes within any container of the pod
          runAsGroup: 1000
          # readOnlyRootFilesystem is a flag to enable readOnlyRootFilesystem for the Hazelcast security context
          readOnlyRootFilesystem: true
          capabilities:
            drop:
              - ALL
        image: "registry.gitlab.com/shortlink-org/shortlink/bff-web:0.17.61"
        # -- Global imagePullPolicy
        # Default: 'Always' if image tag is 'latest', else 'IfNotPresent'
        # Ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
        imagePullPolicy: IfNotPresent
        ports:
          - name: http
            containerPort: 7070
            protocol: TCP
        # -- define a liveness probe that checks every 5 seconds, starting after 5 seconds
        livenessProbe:
          httpGet:
            path: /live
            port: 9090
          initialDelaySeconds: 5
          periodSeconds: 5
          terminationGracePeriodSeconds: 5
          successThreshold: 1
          failureThreshold: 5
          timeoutSeconds: 5
        # -- define a readiness probe that checks every 5 seconds, starting after 5 seconds
        readinessProbe:
          httpGet:
            path: /ready
            port: 9090
          initialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 1
          failureThreshold: 30
          timeoutSeconds: 5
        resources:
          # -- We usually recommend not specifying default resources and to leave this as a conscious
          # choice for the user. This also increases chances charts run on environments with little
          # resources, such as Minikube. If you do want to specify resources, uncomment the following
          # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 10m
            memory: 32Mi
        
      # -- Node labels and tolerations for pod assignment
      # ref: https://kubernetes.io/docs/concepts/configuration/assign-pod-node/#nodeselector
      # ref: https://kubernetes.io/docs/concepts/configuration/assign-pod-node/#taints-and-tolerations-beta-feature
---
# Source: shortlink-bff-web/templates/base.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-shortlink-bff-web
  labels:
    app.kubernetes.io/name: shortlink-bff-web
    helm.sh/chart: shortlink-bff-web-0.1.1
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/part-of: shortlink
    track: stable
  annotations:
    cert-manager.io/cluster-issuer: cert-manager-production
    nginx.ingress.kubernetes.io/enable-opentelemetry: "true"
    nginx.ingress.kubernetes.io/enable-owasp-core-rules: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: shortlink-bff-web
                port:
                  number: 7070
      host: shortlink.best
